--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Dwiki Rama</title>
+    <title>꧁✪Mr★Mafia✪꧂⁩</title>
     <meta name="author" content="Dwiki_Rama">
 
 
