--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>꧁✪Mr★Mafia✪꧂⁩</title>
     <meta name="author" content="Dwiki_Rama">
-
+    <link href="img/Pentagram.jpg" rel="icon">
+    <link rel="icon" href="img/Pentagram.jpg"" type="image/x-icon"> 
 
     <!--  Bootstrap css file  -->
     <link rel="stylesheet" href="./css/bootstrap.min.css">
