--- a/index.html
+++ b/index.html
@@ -4,17 +4,15 @@
 <head>
 	<script type="text/javascript">
 		alert ("Welcome To My First Website")
-		alert ("Author By Dwiki_Rama")
-	
-		alert ("Happy Visiting And Enjoyyy")
+	        alert ("Happy Visiting And Enjoyyy")
 	</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>꧁✪Mr★Mafia✪꧂⁩</title>
+    <title>Dwiki Rama⁩</title>
     <meta name="author" content="Dwiki_Rama">
-    <link href="img/Pentagram.jpg" rel="icon">
-    <link rel="icon" href="img/Pentagram.jpg"" type="image/x-icon"> 
+    <link href="img/linux.png" rel="icon">
+    <link rel="icon" href="img/linux.png"" type="image/x-icon"> 
 
     <!--  Bootstrap css file  -->
     <link rel="stylesheet" href="./css/bootstrap.min.css">
@@ -48,7 +46,7 @@
     <header class="header_area">
         <div class="main-menu">
             <nav class="navbar navbar-expand-lg navbar-light">
-                <a class="navbar-brand" href="#"><img src="./img/logo.png" alt="logo"></a>
+                <a class="navbar-brand page-scroll">Dwiki Rama</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
